--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,14 +24,22 @@ set(
     CUDA_NVCC_FLAGS
     ${CUDA_NVCC_FLAGS};
     -O3 -lineinfo
-    -gencode=arch=compute_30,code=sm_30
-    -gencode=arch=compute_35,code=sm_35
-    -gencode=arch=compute_50,code=sm_50
-    -gencode=arch=compute_52,code=sm_52
-    )
+#    -gencode=arch=compute_30,code=sm_30
+#    -gencode=arch=compute_35,code=sm_35
+    -gencode=arch=compute_50,code=sm_50;
+#    -gencode=arch=compute_52,code=sm_52
+    -std=c++11
+)
 
 cuda_add_executable(
     sgm
     main.cu median_filter.cu hamming_cost.cu disparity_method.cu debug.cu costs.cu)
 
+cuda_add_library(
+  sgm_api
+        api.cu median_filter.cu hamming_cost.cu debug.cu costs.cu
+  SHARED)
+
+
 target_link_libraries( sgm ${OpenCV_LIBS} )
+target_link_libraries( sgm_api ${OpenCV_LIBS} ${CUDA_LIBRARIES})
