--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,8 @@ set(
     -O3 -lineinfo
 #    -gencode=arch=compute_30,code=sm_30
 #    -gencode=arch=compute_35,code=sm_35
-    -gencode=arch=compute_50,code=sm_50;
-#    -gencode=arch=compute_52,code=sm_52
+#    -gencode=arch=compute_50,code=sm_50;
+    -gencode=arch=compute_53,code=sm_53
     -std=c++11
 )
 
