--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,10 +26,10 @@ set(
     CUDA_NVCC_FLAGS
     ${CUDA_NVCC_FLAGS};
     -O3 -lineinfo
-#    -gencode=arch=compute_30,code=sm_30
-#    -gencode=arch=compute_35,code=sm_35
-#    -gencode=arch=compute_50,code=sm_50;
-    -gencode=arch=compute_53,code=sm_53
+    # Nvidia Jetson
+    -gencode=arch=compute_53,code=sm_53;
+    # The beast in the office
+    -gencode=arch=compute_61,code=sm_61
     -std=c++11
 )
 
